@@ -1,3 +1,7 @@
+2000-06-21  Christopher James Lahey  <clahey@helixcode.com>
+
+	* message-list.c: Removed an erroneous comment.
+
 2000-06-21  Dan Winship  <danw@helixcode.com>
 
 	* mail-config.c (create_transport_page): Make this not crash if
